# EZInterval

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  collatz.cpp  fizzbuzz.cpp  look_and_say.cpp  range_for.cpp  sieve_of_eratosthenes.cpp  sort_selected.cpp
include/: CMakeLists.txt
include/ez/: direct_iterator.hpp  interval.hpp
tests/: CMakeLists.txt  basic_interval.cpp  direct_iterator.cpp  interval.cpp  ostream.hpp
tests/test/: main.cpp
